<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.appsnipp.claraerp.saibookhouse.Fragments.help.HelpFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_dash_board" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.appsnipp.claraerp.saibookhouse.Fragments.dashboard.DashBoard"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.appsnipp.claraerp.saibookhouse.Fragments.cart.Cart"
        android:label="@string/title_notifications"
        tools:layout="@layout/activity_buy_now" />
    <fragment
        android:id="@+id/navigation_help"
        android:name="com.appsnipp.claraerp.saibookhouse.Fragments.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_home" />
</navigation>