<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcometxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Welcome"
        android:textColor="@color/textcolor2"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logintitle"
        android:textColor="@color/textcolor6"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/welcometxt" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email/Phone"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/textcolor3"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/textcolor3"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/showpass"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintRight_toRightOf="@id/pass"
        app:layout_constraintTop_toTopOf="@id/pass"
        app:layout_constraintBottom_toBottomOf="@id/pass"
        android:src="@drawable/showpassicon"/>

    <TextView
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbutton"
        android:gravity="center"
        android:padding="13dp"
        android:text="LOGIN"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/pass"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        app:layout_constraintTop_toBottomOf="@id/loginbutton"
        android:layout_marginTop="13dp"
        android:textAlignment="viewEnd"
        android:layout_marginRight="40dp"
        android:padding="5dp"
        android:gravity="center"
        tools:ignore="RtlCompat"
        android:textColor="@color/textcolor3"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or"
        app:layout_constraintTop_toBottomOf="@id/forgot"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/textcolor3"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/loginwith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login With"
        app:layout_constraintTop_toBottomOf="@id/or"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/textcolor3"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="50dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/loginwith"
        android:src="@drawable/google"
        app:layout_constraintEnd_toStartOf="@id/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="50dp"
        android:layout_height="38dp"
        app:layout_constraintTop_toBottomOf="@id/loginwith"
        app:layout_constraintStart_toEndOf="@id/google"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/view_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logtxt"
        app:layout_constraintEnd_toStartOf="@id/createaccount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="3dp"
        android:textColor="@color/textcolor3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/createaccount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="Create Account."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_a"
        android:textColor="@color/buttoncolor"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:layout_marginLeft="2dp"
        android:paddingBottom="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>